profiling-using-exp-runner/recursive-hanoi-remote/experiments/hanoi_experiment_1/run_6_repetition_0/energibridge.log
sampling interval: 200, target function: tower_of_hanoi, input size: 30
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.hanoi as module; X = 30; module.tower_of_hanoi(X,A,C,B); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.236884078979491 for 0.23180385 sec of execution.
